<resources>
    <string name="app_name">Games Store</string>

    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="required">Required</string>

    <!-- Fragments Label -->


    <string name="search_bar_hint">Search for a game...</string>
    <string name="action_genre">Action</string>
    <string name="rpg_genre">RPG</string>
    <string name="sports_genre">Sports</string>
    <string name="adventure_genre">Adventure</string>
    <string name="genres">Genres</string>
    <string name="featured_discounts">Featured Discounts</string>
    <string name="new_releases">New Releases</string>
    <string name="create_your_acount">Create your account now</string>
    <string name="update_your_personal_information">Update your personal information</string>
    <string name="update">Update</string>
    <string name="signup">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="first_name_and_last_name">First name and last name are required</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="more_than_7">Password has to be more than 7 characters</string>
    <string name="success">Success!</string>
    <string name="use_another_email">This email is already in use, use another email!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="already_have_an_account">Already have an account? <font color="#F64B4B">Login</font></string>
    <string name="or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="base_game">Base Game</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="developer">Developer</string>
    <string name="publisher">Publisher</string>
    <string name="release_date">Release Date</string>
    <string name="description">Description</string>
    <string name="platform">Platform</string>
    <string name="game_images">Game images</string>
    <string name="similar_games">Similar games</string>
    <string name="zero_game_found">0 game found</string>
    <string name="completed_already">Completed already</string>
    <string name="canceled_already">Canceled already</string>
    <string name="canceled_successfully">Canceled successfully!</string>
    <string name="cancel_order">Cancel order</string>
    <string name="do_you_want_to_cancel">Do you want to cancel this order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="games">Games</string>
    <string name="zero_games">0 games</string>
    <string name="total_games">Total games</string>
    <string name="sub_total">Subtotal</string>
    <string name="total">Total</string>
    <string name="checkout">Check out</string>
    <string name="discount">Discount</string>
    <string name="deleted_successfully">Deleted Successfully!</string>
    <string name="coupon_is_valid">Coupon is valid</string>
    <string name="coupon_is_not_valid">Coupon is not valid</string>
    <string name="you_have_to_login">You have to login first</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="languages_header">Languages</string>
    <string name="theme_header">Theme</string>

    <!-- Messages Preferences -->
    <string name="language_title">Language</string>

    <!-- Sync Preferences -->
    <string name="theme_title">Dark theme</string>
</resources>